--- a/src/normalize.css
+++ b/src/normalize.css
@@ -67,6 +67,7 @@
   pre {
     font-family: monospace, monospace; /* 1 */
     font-size: 1em; /* 2 */
+    margin: 0;
   }
   
   /* Text-level semantics
